Free xmlDoc memory as soon as possible in XSLTHandler

Make the xmlDoc pointers local and free them as soon as possible
instead of waiting for the XSLTHandler destructor

Patch from Dominik Stadler

BUG: 316449
FIXED-IN: 2.3.8